Fix image overflowing

--- a/extensions/image-viewer.filament-extension/ui/viewer.reel/viewer.css
+++ b/extensions/image-viewer.filament-extension/ui/viewer.reel/viewer.css
@@ -18,27 +18,29 @@
 }
 
 .Viewer-Controls {
+    position: relative;
     width: 100%;
     height: 15px;
 
-    -webkit-flex-basis: 1 0 auto;
-    -moz-flex-basis: 1 0 auto;
-    -ms-flex-basis: 1 0 auto;
-    flex-basis: 1 0 auto;
+    -webkit-flex: 0 0 auto;
+    -moz-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
 
     background-color: hsl(0,0%,96%);
-    -webkit-box-shadow: 0 2px 7px hsl(0,0%,20%);
-    -moz-box-shadow: 0 2px 7px hsl(0,0%,20%);
-    -ms-box-shadow: 0 2px 7px hsl(0,0%,20%);
-    box-shadow: 0 2px 7px hsl(0,0%,20%);
+    box-shadow: 0 2px 6px hsla(0,0%,20%,.6);
 }
 
 .Viewer-ArtBoard {
+    -webkit-flex: 1;
+    -moz-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    
     display: -webkit-flex;
-    -webkit-flex: auto;
-    -moz-flex: auto;
-    -ms-flex: auto;
-    flex: auto;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: flex;
 
     -webkit-justify-content: center;
     -moz-justify-content: center;
@@ -49,6 +51,8 @@
     -moz-align-items: center;
     -ms-align-items: center;
     align-items: center;
+    
+    overflow: auto;
 }
 
 .Viewer-Image {
@@ -57,6 +61,11 @@
     -moz-transition: border 200ms ease-in-out;
     -ms-transition: border 200ms ease-in-out;
     transition: border 200ms ease-in-out;
+    
+    -webkit-flex: 0 0 auto;
+    -moz-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
 }
 
 .Viewer-Image:hover {
